# polybox

./: Cargo.toml  README.md
polybox/: Cargo.toml
polybox-codegen/: Cargo.toml
polybox-codegen/src/: lib.rs
polybox-codegen/src/_old/: envelope.rs  handler.rs  message.rs  protocol.rs
polybox-core/: Cargo.toml  README.md
polybox-core/src/: errors.rs  inbox.rs  interface.rs  lib.rs  message.rs  oneshot.rs  payload.rs  sends.rs  tests.rs
polybox-core/src/address/: dynamic_inbox.rs  mod.rs
polybox-core/src/protocol/: interface.rs  invocation.rs  mod.rs  tests.rs
polybox/examples/: full.rs
polybox/src/: flume_inbox.rs  lib.rs  tokio_inbox.rs
polybox/src/inboxes/: flume_inbox.rs  mod.rs  tokio_inbox.rs
polybox/tests/: basics.rs  example.rs
zestors/: Cargo.toml
zestors-codegen/: Cargo.toml
zestors-codegen/src/: lib.rs
zestors-protocols/: Cargo.toml
zestors-protocols/src/: interface.rs  invocation.rs  lib.rs  oneshot.rs  payload.rs  tests.rs
zestors/src/: address.rs  errors.rs  lib.rs  sending.rs  tests.rs
zestors/src/address/: dynamic.rs  dynamic_inbox.rs  tokio_inbox.rs
zestors/src/protocol/: interface.rs  invocation.rs  mod.rs  payload.rs  tests.rs
