[workspace]
resolver = "3"
members = ["zestors", "zestors-codegen"]

[workspace.dependencies]
zestors-codegen = { path = "zestors-codegen" }


tokio = "1"
type-sets = "0.0.6"
async-trait = "0.1"
futures = "0.3"
thiserror = "2"
derive_more = { version = "2", features = ["full"] }
paste = "1"
disjoint_impls = "1"
dynosaur = "0.3"
