[workspace]
resolver = "3"
members = ["polybox", "polybox-codegen", "polybox-core"]

[workspace.dependencies]
polybox-codegen = { path = "polybox-codegen" }
polybox-core = { path = "polybox-core" }


tokio = "1"
type-sets = "0.0.6"
async-trait = "0.1"
futures = "0.3"
thiserror = "2"
derive_more = { version = "2", features = ["full"] }
flume = "0.12"
