[package]
name = "polybox-core"
version = "0.0.2"
edition = "2024"
repository = "https://github.com/jvdwrf/polybox"
homepage = "https://github.com/jvdwrf/polybox"
authors = ["Jasper van der Werf"]
license = "MIT OR Apache-2.0"
description = "Message-passing abstractions to make working with channels and actors a more seamless experience"
keywords = ["actor", "actor-system", "tokio"]
categories = ["concurrency"]
readme = "README.md"

[dependencies]
type-sets = { workspace = true }
thiserror.workspace = true
polybox-codegen.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync"] }
