[package]
name = "polybox"
version = "0.1.0"
edition = "2024"

[dependencies]
type-sets = { workspace = true }
thiserror.workspace = true
polybox-codegen.workspace = true
polybox-core.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync"] }
flume = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = ["tokio"]
flume = ["dep:flume"]
tokio = []
_ra = ["tokio", "flume"]


[package.metadata.docs.rs]
features = ["_ra"]
